<resources>

    <string name="app_name">Ledski1213Controller</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_controller">ControllerActivity</string>
    <string name="title_activity_preference">PreferenceActivity</string>

    <string name="label_button_power">ドライバ電源</string>
    <string name="label_button_pwm">PWM動作</string>
    <string name="label_button_mode">動作モード</string>
    <string name="label_button_red">R挙動</string>
    <string name="label_button_green">G挙動</string>
    <string name="label_button_blue">B挙動</string>
    <string name="label_button_reset">SWリセット</string>

    <string name="label_text_red">R</string>
    <string name="label_text_green">G</string>
    <string name="label_text_blue">B</string>
    <string name="label_text_gamma">γ</string>
    <string name="label_text_echo_monitor"></string>



    <!--  BluetoothChat -->
    <string name="send">Send</string>
    <string name="not_connected">You are not connected to a device</string>
    <string name="bt_not_enabled_leaving">Bluetooth was not enabled. Leaving the app.</string>
    <string name="title_connecting">connecting...</string>
    <string name="title_connected_to">connected: </string>
    <string name="title_not_connected">not connected</string>

    <!--  DeviceListActivity -->
    <string name="scanning">scanning for devices...</string>
    <string name="select_device">select a device to connect</string>
    <string name="none_paired">No devices have been paired</string>
    <string name="none_found">No devices found</string>
    <string name="title_paired_devices">Paired Devices</string>
    <string name="title_other_devices">Other Available Devices</string>
    <string name="button_scan">Scan for devices</string>

    <!-- Options Menu -->
    <string name="menu_connect">Connect a device</string>
    <string name="menu_discoverable">Make discoverable</string>
    <string name="menu_save_eeprom">save EEPROM</string>

    <!-- PreferenceActivity -->
    <string name="label_edit_power_on_command">点灯</string>
    <string name="label_edit_power_off_command">消灯</string>

    <!-- default commands -->
    <string name="label_text_address">アドレス</string>
    <string name="label_text_data">データ</string>

</resources>