<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentLeft="true"
    android:layout_alignParentTop="true"
    android:stretchColumns="1">

    <Button
        android:id="@+id/buttonPower"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_button_power" />

    <Button
        android:id="@+id/buttonPWM"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_button_pwm" />

    <Button
        android:id="@+id/buttonMode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_button_mode" />

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical|left" >

        <TextView
            android:id="@+id/textViewRed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_text_red"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <SeekBar
            android:id="@+id/seekBarRed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:progressDrawable="@drawable/seekbar_red"
            android:max="255"/>

        <!--
        <Button
            android:id="@+id/buttonRed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_button_red" />
        -->
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical|left" >

        <TextView
            android:id="@+id/textViewGreen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_text_green"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <SeekBar
            android:id="@+id/seekBarGreen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:progressDrawable="@drawable/seekbar_green"
            android:max="255"/>

        <!--
        <Button
            android:id="@+id/buttonGreen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_button_green" />
         -->
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical|left" >

        <TextView
            android:id="@+id/textViewBlue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_text_blue"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <SeekBar
            android:id="@+id/seekBarBlue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:progressDrawable="@drawable/seekbar_blue"
            android:max="255"/>

        <!--
        <Button
            android:id="@+id/buttonBlue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_button_blue" />
         -->
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical|left" >

        <TextView
            android:id="@+id/textViewGamma"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_text_gamma"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <SeekBar
            android:id="@+id/seekBarGamma"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:progressDrawable="@drawable/seekbar_white"
            android:max="255"/>
    </TableRow>

    <!--
        <SeekBar
            android:id="@+id/seekBarAtt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="255"/>
    -->

    <!--
    <Spinner
        android:id="@+id/spinner1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    -->

    <!--
    <Button
        android:id="@+id/buttonReset"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_button_reset" />
    -->
</TableLayout>

